--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,25 @@
 }
 
 .selected_post_widget_form .result_list li .remove{
-    
     float: right;
     margin-right: 10px;
 }
 
 .feature-post-widget{
     margin-bottom: 10px;
+
+}
+
+
+.feature-post-widget .feature-post a .post-title{
+    color: black;
+    text-decoration: none;
+
+}
+
+.feature-post-widget .feature-post a:hover{
+    text-decoration: none;
+
 }
 
 .feature-post-widget h1{
@@ -44,4 +56,10 @@
     padding-bottom: 10px;
     float: left;
     width: 100%;
+    background: white;
+}
+
+.feature-post:hover{
+    background: #ccc;
+    text-decoration: none;
 }
